stratosource/sfdiff/testfiles/rtest/unpackaged/objects/Account.object
<CustomObject>
    <fields>
        <fullName>ASIDBT__c</fullName>
        <description>Site ID for a given billing address.  Oracle is the source.</description>
        <label>Bill To Site #</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASIDST__c</fullName>
        <description>Site ID for given shipping address.  Oracle is the source.</description>
        <label>Ship To Site #</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AccountClassification__c</fullName>
        <label>Account Classification</label>
        <picklist>
            <picklistValues>
                <fullName>Duplicate Account - Delete</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EMEA - Hosting</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hosting/T2 OEM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hybrid</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Internal Use Account</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Named</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>New</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Partner - Advanced Partner</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Partner - Certified Services Partner</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Partner - Distributor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Partner - ISV</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Partner - OEM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Partner - Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Partner - Premier</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Partner - Premier Partner</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Partner - Premier System Integrator</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Partner - Ready Partner</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Partner - Sub-Distributor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Partner - Systems Integrator</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Partner - Technology</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Partner - Training</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Partner - Unaffiliated</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Partner - Value Added Reseller</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Prospect</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sales - Canadian Federal Government</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sales - Commercial</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sales - Commercial New</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sales - EDU</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sales - Enterprise</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sales - Enterprise Named</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>AccountKey__c</fullName>
        <description>Either oracle account number or &apos;:&apos; + oracle party number.</description>
        <externalId>true</externalId>
        <label>Account Key</label>
        <length>21</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>AccountOracleStatus__c</fullName>
        <description>Image field to display the status of the Account as found in oracle. Will display Inactive, Credit Hold, or null. References the isActive and isOnCreditHold fields.</description>
        <formula>IF( 
NOT( 
isAccountActive__c 
), 
IMAGE(&quot;/servlet/servlet.FileDownload?file=01560000000BanO&quot;, &quot;&quot;, 22,119), 
IF( 
isOnCreditHold__c , 
IMAGE(&quot;/servlet/servlet.FileDownload?file=01560000000BanA&quot;, &quot;&quot;, 22,119), 
&quot;&quot; 
) 
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Oracle Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AccountRating__c</fullName>
        <label>Account Rating</label>
        <picklist>
            <picklistValues>
                <fullName>Target</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Develop</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Nurture</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Top 25</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mid 25</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bottom 50</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Account_Alias_Name__c</fullName>
        <description>Field to capture the Account Alias Name to be used by Finance and Admin</description>
        <label>Account Alias Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Assets__c</fullName>
        <label>Account Assets</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Account_OwnerName__c</fullName>
        <description>This field is used to reference the Account Owner by Name in all the related objects.</description>
        <label>Account Owner Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Priority__c</fullName>
        <description>Deployed as part of SFA R2, used to prioritize accounts with a high to low number rating</description>
        <label>Account Priority</label>
        <picklist>
            <picklistValues>
                <fullName>High</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Medium</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Low</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Accreditation__c</fullName>
        <label>Accreditation</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Additional_Countries_of_Operation__c</fullName>
        <label>Additional Countries of Operation</label>
        <picklist>
            <picklistValues>
                <fullName>Afghanistan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Åland</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Albania</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Algeria</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Antigua</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Argentina</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Aruba</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Australia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Austria</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Azerbaijan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bahamas</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bahrain</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Barbados</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Barbuda</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Belarus</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Belgium</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Belize</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Benelux</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Benin</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bermuda</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bolivia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bosnia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bosnia and Herzegovina</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Botswana</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Brazil</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>British Virgin Islands</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bulgaria</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Burkina Faso</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Burundi</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cameroon</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Additional_Partnerships__c</fullName>
        <label>Additional Partnerships</label>
        <picklist>
            <picklistValues>
                <fullName>AMD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cisco</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Citrix</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fujitsu</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HP Hardware</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HP Software</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IBM Hardware</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IBM Software</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Intel</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Microsoft</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Novell SuSE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Oracle/BEA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SAP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Siemens</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>VMWare</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Advertising__c</fullName>
        <label>Advertising</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Agree_to_Attend_RH_Webinar__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Implemented for CGS

Does the partner agree to attend RH Webinar by a certain date?</description>
        <inlineHelpText>Does the partner agree to attend RH Webinar by a certain date?</inlineHelpText>
        <label>Agree to Attend RH Webinar?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Agree_to_Sales_Certification__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Implemented for CGS</description>
        <inlineHelpText>Does Partner agree to acheive one Sales Certification by a certain date?</inlineHelpText>
        <label>Agree to Sales Certification?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Agree_to_Submit_Marketing_Plan__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Implemented for CGS

Does the partner agree to submit a Marketing Plan by a certain date?</description>
        <inlineHelpText>Does the partner agree to submit a Marketing Plan by a certain date?</inlineHelpText>
        <label>Agree to Submit Marketing Plan?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Agree_to_Technical_Enrollment__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Implemented for CGS</description>
        <inlineHelpText>Does the partner agree to one technical enrollment by a certain date?</inlineHelpText>
        <label>Agree to Technical Enrollment?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>All_NAICS_Codes__c</fullName>
        <label>All NAICS Codes</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Anniversary_Date_True_Up_Accounts__c</fullName>
        <description>Indicates the Anniversary Date of a True Up Account</description>
        <label>Anniversary Date – True Up Accounts</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Annual_Reports_Available__c</fullName>
        <label>Annual Reports Available</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Application_Server__c</fullName>
        <label>Application Server</label>
        <picklist>
            <picklistValues>
                <fullName>JBoss</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Oracle Application Server</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Resin</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SunOne</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TomCat</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Weblogic</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Websphere</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Application_Types__c</fullName>
        <label>Application Types</label>
        <picklist>
            <picklistValues>
                <fullName>None</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Application Design/Construction</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Application Life-Cycle Mgt</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Back-Office enterprise</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Collaboration/Groupware</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Consumer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Content Management</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Authoring</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Customer Relationship Management</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Database/Information/Data Management</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Engineering</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Enterprise Resource Planning</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Information Access</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Delivery/Mining/Portal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Middleware/Message-oriented</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Transaction Network Management</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Networking</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other Development Tools</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Security</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ServerWare/Clustering/Web/VM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Storage</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>System-Level Software</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Systems Management</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Back_up_Recovery__c</fullName>
        <label>Back-up / Recovery</label>
        <picklist>
            <picklistValues>
                <fullName>Arkeia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Legato Networker</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tivoli Storage Manager</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Veritas Netbackup</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Budget_Cycle__c</fullName>
        <label>Annual Budget Begins</label>
        <picklist>
            <picklistValues>
                <fullName>January</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>February</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>March</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>April</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>May</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>June</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>July</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>August</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>September</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>October</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>November</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>December</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Budget_Planning__c</fullName>
        <label>Budget Planning</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Business_Pains_2__c</fullName>
        <label>Business Pains (2)</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Business_Pains__c</fullName>
        <label>Business Pains</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Business_Structure__c</fullName>
        <label>Business Structure</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>CGS_Status__c</fullName>
        <description>Current Status (Committed Means Agreed to Training &amp; Other Program Requirements)

Added for CGS project</description>
        <inlineHelpText>Current Status (Committed means partner has agreed to training &amp; other program requirements)</inlineHelpText>
        <label>CGS Status</label>
        <picklist>
            <picklistValues>
                <fullName>Bad Number</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Committed - In process</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Duplicate Partner Entry</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Enabled - Complete</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Engaged - Interested</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Interested - Bad Experience With RH</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Interested - General</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Interested - No Open Source Interest</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Interested - Not Reselling</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Out of Business</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RH Do Not Call</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Undetermined - See Comments</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Warm - Follow-Up Required</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Certifications_ReHEL__c</fullName>
        <label>Certifications ReHEL</label>
        <summaryFilterItems>
            <field>PartnerTraining__c.IsActive__c</field>
            <operation>equals</operation>
            <value>true</value>
        </summaryFilterItems>
        <summaryForeignKey>PartnerTraining__c.Partner__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Class_of_Trade__c</fullName>
        <label>Class of Trade</label>
        <picklist>
            <picklistValues>
                <fullName>Distributor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DMR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ISV</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>OEM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>VAR</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Cluster_File_Systems__c</fullName>
        <label>Cluster File Systems</label>
        <picklist>
            <picklistValues>
                <fullName>GFS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IBM GPFS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lustre</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>OCFS1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>OCFS2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Polyserve</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Veritas VxFS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>XFS</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Completeness__c</fullName>
        <label>Completeness</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Compliance_Score__c</fullName>
        <label>Compliance Score</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Core_Specializations_Reselling__c</fullName>
        <description>Implemented for CGS

What Core Red Hat Specializations Is Partner Interested In Reselling?</description>
        <inlineHelpText>What Core Red Hat Specializations Is Partner Interested In Reselling?</inlineHelpText>
        <label>Core Specializations Reselling</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Cost_Income_Ratios__c</fullName>
        <label>Cost / Income Ratio</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <description>TEST TEST TEST</description>
        <label>Country</label>
        <referenceTo>Country__c</referenceTo>
        <relationshipLabel>Accounts</relationshipLabel>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CreditLimit__c</fullName>
        <description>Finance field - read only for all other users</description>
        <label>Credit Limit</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CreditPreApproved__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Credit Pre-Approved</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Credit_Approved_by__c</fullName>
        <label>Credit Approved by</label>
        <picklist>
            <picklistValues>
                <fullName>Jacqui Fleury</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pam Waltrous</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sheree Alhmer</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Current_JB_Owner__c</fullName>
        <description>Indicates the owner of the account when the account resided in the JBSF.</description>
        <label>Current JB Owner</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_Status__c</fullName>
        <label>Customer Status</label>
        <picklist>
            <picklistValues>
                <fullName>Not a Customer</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Red Hat</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>JBoss</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Red Hat and JBoss</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>D_U_N_S__c</fullName>
        <label>D-U-N-S Number</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Database__c</fullName>
        <label>Database</label>
        <picklist>
            <picklistValues>
                <fullName>DB2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Informix</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MySQL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Oracle</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Oracle RAC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PostgreSQL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SQL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sybase</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>DateOfLastCreditCheck__c</fullName>
        <description>Finance field - read only for all other users</description>
        <label>Date of Last Credit Check</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_FCPA_Check_Performed__c</fullName>
        <label>Date FCPA Check Performed</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Date_Last_Cleansed__c</fullName>
        <label>Date Last Cleansed</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Legal_T_s_C_s_Accepted__c</fullName>
        <label>Date Legal T&apos;s &amp; C&apos;s Accepted</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Deal_Registration_Trained__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Is the Partner Deal Registration Trained?

Implemented for CGS</description>
        <inlineHelpText>Is the Partner Deal Registration Trained?</inlineHelpText>
        <label>Deal Registration Trained?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Describe__c</fullName>
        <label>Describe Special Offerings or Skills</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Description_of_Business__c</fullName>
        <label>Description of Business</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Directory_Server__c</fullName>
        <label>Directory Server</label>
        <picklist>
            <picklistValues>
                <fullName>Active Directory</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Netscape Directory Server</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Novell Directory Services (NDS)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Oracle Internet Directory (OID)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SunOne Directory Server</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tivoli Directory Server</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Disable_Send_Partner_Notification__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Allows Reps at the Partner Account level to disable the auto send email notification when a Partner is added to the sales team</description>
        <inlineHelpText>To disable the auto send email notification when a Partner is added to the sales team at the Partner Account level.</inlineHelpText>
        <label>Disable Send Partner Notification</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Discount__c</fullName>
        <label>Discount %</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>EMEA_SE_Required__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Checkbox used to notify when sales engineering needs to be engaged.</description>
        <label>Tandem</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ERP_Systems__c</fullName>
        <label>ERP System</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Employee_Growth__c</fullName>
        <label>Employee Growth</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Enrollment_Date__c</fullName>
        <label>Enrollment Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Enterprise_Name__c</fullName>
        <description>Name of company hyperlinked to Harte Hanks DB.</description>
        <label>Enterprise Name</label>
        <type>Url</type>
    </fields>
</CustomObject>